2002-10-26  Darin Adler  <darin@apple.com>

	- changed to use #if APPLE_CHANGES and #if !APPLE_CHANGES consistently

	We no longer do #ifdef APPLE_CHANGES or #ifndef APPLE_CHANGES.

        * lots of files

2002-10-26  Darin Adler  <darin@apple.com>

        - changed naming scheme in KWQ for files like qstring.h

        Now use names like KWQString.h and a forwarding header called qstring.h.
        
        * tons of files

2002-10-26  Darin Adler  <darin@apple.com>

	- fixed 3068404 -- eliminate all user-visible messages from WebCore

        * khtml/ecma/kjs_window.cpp: (WindowFunc::tryCall): Use runJavaScriptPrompt
	function instead of the more generic QInputDialog.

        * khtml/html/html_formimpl.cpp: (HTMLInputElementImpl::altText): Get
	submit alt text for input element from the view factory, rather than using
	i18n, since we don't support that.
        * khtml/html/htmlparser.cpp: (KHTMLParser::handleIsindex): Ditto, for the
	intro that says "This is a searchable index".
        * khtml/rendering/render_form.cpp:
        (RenderSubmitButton::defaultLabel): Ditto, for "Submit".
        (RenderResetButton::defaultLabel): Ditto, for "Reset".
        (RenderFileButton::slotClicked): Ifdef'd out this unused code that had i18n text in it.

        * khtml/xml/xml_tokenizer.cpp:
        (XMLHandler::errorString): Put in an ifdef and a FIXME to avoid i18n.
        (XMLHandler::fatalError): Ditto.
        (XMLTokenizer::finish): Ditto.

        * khtml/misc/decoder.cpp: (Decoder::decode): Ifdef'd the check for the first
	language being "ja", since that's not how we're going to trigger Japanese
	auto-detect.

        * khtml/rendering/render_applet.cpp: (RenderEmptyApplet::RenderEmptyApplet):
	Turned off the code that does the empty applet label. I don't think it worked,
	and it used i18n. We'll have to tackle this eventually.

        * kwq/KWQKHTMLPartImpl.h: Added runJavaScriptPrompt.